2013-07-30   Benjamin Kosnik  <bkoz@redhat.com>

	* scripts/run-testsuite.sh (CXX): From VTV_CXXLINKFLAGS.

	* vtv_init.cc: Remove.
	
2013-07-30  Caroline Tice  <cmtice@google.com>
	    Benjamin Kosnik  <bkoz@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Add
	Wl,-u_vtable_map_vars_start,-u_vtable_map_vars_end.
	* Makefile.in: Regenerate.

2013-07-29  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/VtableVerificationFeatureProposal.pdf: Edits.

2013-07-29  Caroline Tice  <cmtice@google.com>

	* scripts/sum-vtv-counts.c: New. Summarize -fvtv-counts output log
	files.

2013-07-29  Benjamin Kosnik  <bkoz@redhat.com>

	* scripts/run-testsuite.sh (PASS_FAIL_TESTS): Comment out failing test.

2013-07-29  Benjamin Kosnik  <bkoz@redhat.com>

	* Makefile.am (libvtv_include_HEADERS, libvtv_la_SOURCES): Make
	conditional on enable-vtable-verify.
	* acinclude.m4 (LIBVTV_CONFIGURE): Add check for --enable-vtable-verify.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

	* scripts/run-testsuite.sh: Add LDFLAGS.

	* testsuite/Makefile.am (check-am): Conditionalize on
	enable_vtable_verify check.
	* testsuite/Makefile.in: Regenerate.

2013-07-26  Caroline Tice  <cmtice@google.com>

	* doc/VtableVerification-FeatureProposal.pdf: New.
	* doc/VtableVerification-PartialVerificationProblem.pdf: New.
	* doc/VtableVerification-UsersGuide.pdf: New.

2013-07-26  Benjamin Kosnik  <bkoz@redhat.com>

	* Makefile.am
	* Makefile.in: Regenerate.
	* acinclude.m4 (LIBVTV_CONFIGURE): New.
	* configure: Regenerate.
	* configure.ac: Call LIBVTV_CONFIGURE.
	* testsuite/Makefile.am: New.
	(check-script): New.
	* testsuite/Makefile.in: Regenerate.

2013-07-26  Caroline Tice  <cmtice@google.com>
	    Benjamin Kosnik  <bkoz@redhat.com>

	* scripts/run-testsuite.sh: Test harness.

2013-07-26  Caroline Tice  <cmtice@google.com>

	* testsuite/const_vtable.cc: Add tests.
	* testsuite/dataentry.cc: Same.
	* testsuite/dlopen.cc: Same.
	* testsuite/dlopen_mt.cc: Same.